Fix header up when text too much

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 
 .App-chatroom {
   flex: 12;
-
+  overflow: auto;
 }
 
 .App-chatroom-text {
