--- a/src/Headerchat.css
+++ b/src/Headerchat.css
@@ -11,7 +11,7 @@
 .App-chatroom 
   {
     flex: 12;
-    background-color:#2D2C67
+    overflow: auto;
   }
   
 .App-chatroom-text 
