--- a/src/PrivateChatRoom.css
+++ b/src/PrivateChatRoom.css
@@ -25,13 +25,13 @@
 .App-chatroom 
 {
   flex: 12;
-  background-color:#2D2C67
+  overflow: auto;
 }
 
 .App-chatroom-text 
 {
   margin: 8px;
-
+  
   background-color: rgb(144, 218, 101);
   color : rgb(48, 100, 100);
   font-size: 20px;
